# ai-scraper-agent

./: .dockerignore  .gitignore  DESIGN.md  DEVLOG.md  Dockerfile  docker-compose.yml  nginx.conf  readme.md
.claude/: settings.local.json
.memsearch/memory/: 2026-04-12.md
.qwen/: settings.json  settings.json.orig
backend/: .env.example  cli.py  config.yaml  pyproject.toml  test_llm.py
backend/data/: scraper.db
backend/data/experiments/: current_config.json  report_20260412_173803.json
backend/data/outputs/: .gitkeep
backend/src/: __init__.py
backend/src/agents/: __init__.py  crew.py  extractor.py  navigator.py  planner.py  self_improvement.py  validator.py
backend/src/api/: __init__.py  llm_routes.py  main.py  routes.py  schemas.py
backend/src/llm/: provider.py
backend/src/models/: __init__.py  database.py
backend/src/prompts/: __init__.py
backend/src/services/: __init__.py  improvement_loop.py  scheduler.py  task_service.py
backend/src/tools/: __init__.py  agent_browser.py
backend/src/utils/: __init__.py  config.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: AppLayout.tsx  Navbar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json
frontend/src/pages/: CreateTaskForm.tsx  CreateTaskPage.tsx  HomePage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TaskListPage.tsx
frontend/src/routes/: __root.tsx  index.tsx  settings.tsx
frontend/src/routes/tasks/: $taskId.tsx  create.tsx  index.tsx
frontend/src/services/: api.ts
frontend/src/stores/: useTaskStore.ts
frontend/src/types/: index.ts
