[project]
name = "ai-scraper-agent"
version = "0.1.0"
description = "自然语言驱动的智能爬虫 Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心框架
    "crewai>=0.30.0",
    "crewai-tools>=0.5.0",
    "langchain-openai>=0.0.5",
    
    # 浏览器控制
    "playwright>=1.40.0",
    # agent-browser 通过 CLI 调用，无需 Python 包
    
    # LLM
    "openai>=1.10.0",
    
    # API 服务
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    
    # 数据存储
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    
    # 数据处理
    "pandas>=2.1.4",
    "openpyxl>=3.1.2",
    
    # 任务调度
    "apscheduler>=3.10.4",
    
    # 工具库
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
scraper = "src.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C", "U"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
